[gd_scene load_steps=22 format=3 uid="uid://c2mu5dbs0ygi"]

[ext_resource type="Script" path="res://scenes/maps/map.gd" id="1_hb5q0"]
[ext_resource type="PackedScene" uid="uid://cggv2aprcfaj7" path="res://entities/kenney_castle/wall.glb" id="1_y2fe7"]
[ext_resource type="PackedScene" uid="uid://dewxviko6kc7j" path="res://entities/kenney_castle/ground.glb" id="2_yawvx"]
[ext_resource type="PackedScene" uid="uid://cmwsrsb5b6vn4" path="res://entities/kenney_castle/wall-corner-half-tower.glb" id="3_87kc3"]
[ext_resource type="PackedScene" uid="uid://ddx8dkd847qk1" path="res://entities/lock/lock.blend" id="3_u1x8r"]
[ext_resource type="PackedScene" uid="uid://dj1mirjbejc8u" path="res://entities/kenney_castle/wall-narrow-gate.glb" id="4_2twep"]
[ext_resource type="PackedScene" uid="uid://d4ecjqafedy61" path="res://entities/kenney_castle/gate.glb" id="5_k87lp"]
[ext_resource type="PackedScene" uid="uid://cqvmba6mdy50m" path="res://entities/kenney_castle/tower-square-top.glb" id="7_0qhuy"]
[ext_resource type="PackedScene" uid="uid://cio31ipi156e8" path="res://entities/kenney_castle/wall-half.glb" id="7_17rkf"]
[ext_resource type="PackedScene" uid="uid://bw85upkuscvhr" path="res://entities/portal/portal.tscn" id="9_scpvo"]
[ext_resource type="PackedScene" uid="uid://ddr8fi8qrts26" path="res://entities/kenney_castle/tree-trunk.glb" id="10_f152l"]
[ext_resource type="PackedScene" uid="uid://c7hunhcgtifi3" path="res://entities/kenney_castle/tree-large.glb" id="10_w2ruf"]
[ext_resource type="PackedScene" uid="uid://dbtti55rud61t" path="res://entities/kenney_castle/tree-log.glb" id="11_gbugb"]
[ext_resource type="PackedScene" uid="uid://b81e0gv0t3sk0" path="res://entities/kenney_castle/tree-small.glb" id="11_qjkan"]
[ext_resource type="PackedScene" uid="uid://d0bxx6ogqxu7l" path="res://entities/kenney_castle/rocks-large.glb" id="13_r8vpo"]
[ext_resource type="Script" path="res://nodes/floaty.gd" id="17_gih1t"]
[ext_resource type="PackedScene" uid="uid://btawul4jly88w" path="res://entities/key/key.blend" id="17_n1cjm"]
[ext_resource type="PackedScene" uid="uid://cio1ma08e5rl0" path="res://entities/water/water.tscn" id="18_c14gt"]
[ext_resource type="PackedScene" uid="uid://cr45uoqsdnjx5" path="res://entities/crate/crate.tscn" id="18_kx5qk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3csol"]
albedo_color = Color(0.682353, 0.482353, 0.341176, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_iiw62"]
material = SubResource("StandardMaterial3D_3csol")
size = Vector2(1, 1)

[node name="ExampleLevel" type="Node3D"]
script = ExtResource("1_hb5q0")

[node name="ground3" parent="." instance=ExtResource("2_yawvx")]
transform = Transform3D(13, 0, 0, 0, 3, 0, 0, 0, 21, 4, 0, -2)

[node name="ground4" parent="." instance=ExtResource("2_yawvx")]
transform = Transform3D(13, 0, 0, 0, 3, 0, 0, 0, 21, -11, 0, -2)

[node name="gate2" parent="." instance=ExtResource("5_k87lp")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, -1.5)

[node name="lock" parent="gate2" instance=ExtResource("3_u1x8r")]
transform = Transform3D(-0.8, 0, 1.20797e-07, 0, 0.8, 0, -1.20797e-07, 0, -0.8, 0.0612781, 0.387598, 0)

[node name="tower-square-top2" parent="." instance=ExtResource("7_0qhuy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -2)

[node name="tower-square-top3" parent="." instance=ExtResource("7_0qhuy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -2)

[node name="Portal" parent="." instance=ExtResource("9_scpvo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -5)

[node name="tree-trunk2" parent="." instance=ExtResource("10_f152l")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -6, 0, -5)

[node name="tree-log2" parent="." instance=ExtResource("11_gbugb")]
transform = Transform3D(1.06066, 0, -1.06066, 0, 1.5, 0, 1.06066, 0, 1.06066, -5.78801, 0, -5.89065)

[node name="tree-large2" parent="." instance=ExtResource("10_w2ruf")]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, -7, 0, -6)

[node name="tree-large3" parent="." instance=ExtResource("10_w2ruf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.6482, 0, -5.32509)

[node name="rocks-large2" parent="." instance=ExtResource("13_r8vpo")]
transform = Transform3D(0.945933, 0, -0.324363, 0, 1, 0, 0.324363, 0, 0.945933, -6.15486, 0, -3.99879)

[node name="tree-small2" parent="." instance=ExtResource("11_qjkan")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -4.7092)

[node name="RiverBank2" type="MeshInstance3D" parent="."]
transform = Transform3D(-8.74228e-08, 1, 0, -2, -4.37114e-08, 0, 0, 0, 21, -4.5, -1, -2)
mesh = SubResource("PlaneMesh_iiw62")

[node name="RiverBed" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 21, -3.5, -2, -2)
mesh = SubResource("PlaneMesh_iiw62")

[node name="RiverBank" type="MeshInstance3D" parent="."]
transform = Transform3D(8.74228e-08, -1, -1.83588e-06, -2, -4.37114e-08, 0, -7.64274e-15, 8.74228e-08, -21, -2.5, -1, -2)
mesh = SubResource("PlaneMesh_iiw62")

[node name="WallGroup" type="Node" parent="."]

[node name="wall2" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="wall17" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="wall3" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -1)

[node name="wall23" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -5)

[node name="wall24" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -4)

[node name="wall25" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -3)

[node name="wall26" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -5)

[node name="wall27" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -4)

[node name="wall28" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -3)

[node name="wall5" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2, 0, -2)

[node name="wall6" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -2)

[node name="wall11" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, -2)

[node name="wall8" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2, 0, 2)

[node name="wall9" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 2)

[node name="wall10" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 2)

[node name="wall29" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, -6)

[node name="wall31" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2, 0, -6)

[node name="wall30" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -6)

[node name="wall12" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, 2)

[node name="wall15" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 0, 2)

[node name="wall16" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5, 0, 2)

[node name="wall14" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -7, 0, 2)

[node name="wall20" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 0, -2)

[node name="wall21" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5, 0, -2)

[node name="wall22" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -7, 0, -2)

[node name="wall13" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 0, 2)

[node name="wall4" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 1)

[node name="wall18" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -1)

[node name="wall19" parent="WallGroup" instance=ExtResource("1_y2fe7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 1)

[node name="wall-corner-half-tower2" parent="WallGroup" instance=ExtResource("3_87kc3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 2)

[node name="wall-corner-half-tower5" parent="WallGroup" instance=ExtResource("3_87kc3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -8, 0, 2)

[node name="wall-corner-half-tower3" parent="WallGroup" instance=ExtResource("3_87kc3")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3, 0, -6)

[node name="wall-corner-half-tower6" parent="WallGroup" instance=ExtResource("3_87kc3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0, -6)

[node name="wall-corner-half-tower4" parent="WallGroup" instance=ExtResource("3_87kc3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -8, 0, -2)

[node name="wall-narrow-gate2" parent="WallGroup" instance=ExtResource("4_2twep")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, -2)

[node name="wall-half2" parent="WallGroup" instance=ExtResource("7_17rkf")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0, -2)

[node name="wall-half3" parent="WallGroup" instance=ExtResource("7_17rkf")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1, 0, -2)

[node name="HazardGroup" type="Node" parent="."]

[node name="Water" parent="HazardGroup" instance=ExtResource("18_c14gt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -2)
size = Vector2i(2, 21)

[node name="EntityGroup" type="Node" parent="."]

[node name="Crate" parent="EntityGroup" instance=ExtResource("18_kx5qk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="Crate2" parent="EntityGroup" instance=ExtResource("18_kx5qk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)

[node name="Crate3" parent="EntityGroup" instance=ExtResource("18_kx5qk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, 0)

[node name="Floaty" type="Node3D" parent="EntityGroup" node_paths=PackedStringArray("target")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -6, 0.5, 0)
script = ExtResource("17_gih1t")
target = NodePath("key")
bob_magnitude = 0.2

[node name="key" parent="EntityGroup/Floaty" instance=ExtResource("17_n1cjm")]
